--- a/debian/numptyphysics.desktop
+++ b/debian/numptyphysics.desktop
@@ -10,3 +10,4 @@ X-Window-Icon=numptyphysics48
 X-Window-Icon-Dimmed=numptyphysics48
 X-HildonDesk-ShowInToolbar=true
 X-Osso-Type=application/x-executable
+MimeType=application/x-numptyphysics-level
