--- a/debian/numptyphysics.desktop
+++ b/debian/numptyphysics.desktop
@@ -5,9 +5,10 @@ Type=Application
 Name=Numpty Physics
 Exec=/usr/bin/numptyphysics
 StartupWMClass=NPhysics
-Icon=numptyphysics48
-X-Window-Icon=numptyphysics48
-X-Window-Icon-Dimmed=numptyphysics48
+Icon=numptyphysics64
+X-Window-Icon=numptyphysics64
+X-Window-Icon-Dimmed=numptyphysics64
 X-HildonDesk-ShowInToolbar=true
 X-Osso-Type=application/x-executable
+X-Osso-Service=org.maemo.garage.numptyphysics
 MimeType=application/x-numptyphysics-level
