--- a/debian/numptyphysics.desktop
+++ b/debian/numptyphysics.desktop
@@ -6,9 +6,19 @@ Name=Numpty Physics
 Exec=/usr/bin/numptyphysics
 StartupWMClass=NPhysics
 Icon=numptyphysics64
+X-Icon-path=/usr/share/pixmaps
 X-Window-Icon=numptyphysics64
 X-Window-Icon-Dimmed=numptyphysics64
 X-HildonDesk-ShowInToolbar=true
 X-Osso-Type=application/x-executable
 X-Osso-Service=org.maemo.garage.numptyphysics
 MimeType=application/x-numptyphysics-level
+
+[X-Osso-URI-Actions]
+http=X-Osso-URI-Action-Open;
+nptp=X-Osso-URI-Action-Open;
+
+[X-Osso-URI-Action-Open]
+Method=mime_open
+Name=uri_link_play
+TranslationDomain=osso-uri
