--- a/debian/numptyphysics.desktop
+++ b/debian/numptyphysics.desktop
@@ -3,12 +3,13 @@ Encoding=UTF-8
 Version=1.0
 Type=Application
 Name=Numpty Physics
+Categories=Game;LogicGame;
 Exec=/usr/bin/numptyphysics
 StartupWMClass=NPhysics
 Icon=numptyphysics64
 X-Icon-path=/usr/share/pixmaps
-X-Window-Icon=numptyphysics64
-X-Window-Icon-Dimmed=numptyphysics64
+X-Window-Icon=numptyphysics
+X-Window-Icon-Dimmed=numptyphysics
 X-HildonDesk-ShowInToolbar=true
 X-Osso-Type=application/x-executable
 X-Osso-Service=org.maemo.garage.numptyphysics
