--- a/configure.in
+++ b/configure.in
@@ -31,19 +31,40 @@ AC_CHECK_LIB(SDL_image, IMG_LoadPNG_RW, , AC_MSG_ERROR([
 AC_ARG_ENABLE(hildon, [  --disable-hildon             build without maemo/hildon support], enable_hildon=$enableval, enable_hildon=yes)
 
 if test "x${enable_hildon}" = "xyes" ; then
-   PKG_CHECK_MODULES(GLIB, [glib-2.0], [], [])
-   PKG_CHECK_MODULES(DBUS, [dbus-1], [], [])
-   PKG_CHECK_MODULES(HILDON, [hildon-1], [enable_hildon=yes], [enable_hildon=no])
+   PKG_CHECK_MODULES(HILDON, [hildon-1 hildon-fm-2 libosso libossoemailinterface 
+   			     glib-2.0 dbus-1], 
+   			     [enable_hildon=yes], [enable_hildon=no])
 fi
 if test "x${enable_hildon}" = "xyes" ; then
    AC_DEFINE( [USE_HILDON],[], using hildon )
+   desktopentrydir=`$PKG_CONFIG osso-af-settings --variable=desktopentrydir`
+   serviceentrydir=`$PKG_CONFIG osso-af-settings --variable=dbusservicedir`
+   icon_26x26dir=$datadir/icons/hicolor/26x26/hildon
+   icon_34x34dir=$datadir/icons/hicolor/34x34/hildon
+   icon_40x40dir=$datadir/icons/hicolor/40x40/hildon
+   icon_50x50dir=$datadir/icons/hicolor/50x50/hildon
+   icon_64x64dir=$datadir/icons/hicolor/64x64/hildon
+   icon_scalabledir=$datadir/icons/hicolor/scalable/hildon
    AC_SUBST(HILDON_CFLAGS)
    AC_SUBST(HILDON_LIBS)
-   AC_SUBST(GLIB_CFLAGS)
-   AC_SUBST(GLIB_LIBS)
-   AC_SUBST(DBUS_CFLAGS)
-   AC_SUBST(DBUS_LIBS)
+else
+   desktopentrydir=/usr/share/applications
+   serviceentrydir=$datadir/numptyphysics
+   icon_26x26dir=$datadir/icons/hicolor/26x26/apps
+   icon_34x34dir=$datadir/icons/hicolor/34x34/apps
+   icon_40x40dir=$datadir/icons/hicolor/40x40/apps
+   icon_50x50dir=$datadir/icons/hicolor/50x50/apps
+   icon_64x64dir=$datadir/icons/hicolor/64x64/apps
+   icon_scalabledir=$datadir/icons/hicolor/scalable/apps
 fi
+AC_SUBST(desktopentrydir)
+AC_SUBST(serviceentrydir)
+AC_SUBST(icon_26x26dir)
+AC_SUBST(icon_34x34dir)
+AC_SUBST(icon_40x40dir)
+AC_SUBST(icon_50x50dir)
+AC_SUBST(icon_64x64dir)
+AC_SUBST(icon_scalabledir)
 
 
 AC_CHECK_LIB(stdc++, main)
