--- a/configure.in
+++ b/configure.in
@@ -31,8 +31,7 @@ AC_CHECK_LIB(SDL_image, IMG_LoadPNG_RW, , AC_MSG_ERROR([
 AC_ARG_ENABLE(hildon, [  --disable-hildon             build without maemo/hildon support], enable_hildon=$enableval, enable_hildon=yes)
 
 if test "x${enable_hildon}" = "xyes" ; then
-   PKG_CHECK_MODULES(HILDON, [hildon-1 hildon-fm-2 libosso libossoemailinterface 
-   			     glib-2.0 dbus-1], 
+   PKG_CHECK_MODULES(HILDON, [hildon-1 hildon-fm-2 libossoemailinterface], 
    			     [enable_hildon=yes], [enable_hildon=no])
 fi
 if test "x${enable_hildon}" = "xyes" ; then
@@ -69,6 +68,7 @@ AC_SUBST(icon_scalabledir)
 
 AC_CHECK_LIB(stdc++, main)
 AC_CHECK_LIB(X11, main)
+AC_CHECK_LIB(z, main)
 
 
 AC_OUTPUT(Makefile)
