--- a/debian/control
+++ b/debian/control
@@ -2,8 +2,10 @@ Source: numptyphysics
 Section: user/games
 Priority: optional
 Maintainer: Tim Edmonds <tmedmonds@gmail.com>
-Build-Depends: debhelper (>> 5.0.0), dh-buildinfo, libsdl1.2-dev, libsdl-image1.2-dev
- ,libosso-email-interface-dev, libhildon1-dev, libhildonmime-dev, libgtk2.0-dev
+Build-Depends: debhelper (>> 5.0.0), dh-buildinfo, 
+  libsdl1.2-dev, libsdl-image1.2-dev, zlib1g-dev
+  ,libosso-email-interface-dev, libhildonfm2-dev, libhildon1-dev
+  ,libhildonmime-dev, libgtk2.0-dev
 Standards-Version: 3.7.2
 
 Package: numptyphysics
