--- a/configure.in
+++ b/configure.in
@@ -27,6 +27,9 @@ AC_SUBST(SDL_LIBS)
 AC_CHECK_LIB(SDL_image, IMG_LoadPNG_RW, , AC_MSG_ERROR([
 *** Unable to find SDL_image libary with PNG support
 ]))
+AC_CHECK_LIB(SDL_ttf, TTF_OpenFont, , AC_MSG_ERROR([
+*** Unable to find SDL_ttf libary
+]))
 
 AC_ARG_ENABLE(hildon, [  --disable-hildon             build without maemo/hildon support], enable_hildon=$enableval, enable_hildon=yes)
 
