--- a/debian/control
+++ b/debian/control
@@ -3,7 +3,8 @@ Section: user/games
 Priority: optional
 Maintainer: Thomas Perl <m@thp.io>
 Build-Depends: debhelper (>= 7.0.0), pkg-config, build-essential,
- libsdl1.2-dev, libsdl-image1.2-dev, libsdl-ttf2.0-dev, zlib1g-dev
+ libsdl1.2-dev, libsdl-image1.2-dev, libsdl-ttf2.0-dev, zlib1g-dev,
+ vim-common
 Standards-Version: 3.9.2
 Homepage: http://numptyphysics.garage.maemo.org/
 
